added favicon links from main site

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="theme-color" content="#000000" />
-		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta name="theme-color" content="#00ffff" />
 		<meta name="description" content="Web site created using create-react-app" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="icon" href="https://www.ryanbrandle.dev/favicon.ico" sizes="any" />
+		<link rel="icon" type="image/svg+xml" href="https://www.ryanbrandle.dev/icon.svg" />
+		<link rel="apple-touch-icon" href="https://www.ryanbrandle.dev/icons/icon-192x192.png" />
+		<link rel="manifest" href="https://www.ryanbrandle.dev/manifest.webmanifest" />
+		<link rel="icon" type="image/png" sizes="192x192" href="https://www.ryanbrandle.dev/icons/maskable-icon.png" />
 		<title>Accessible Flashcards for Kids</title>
 	</head>
 
